compiler/org/pshdl/model/parser/PSHDLLangParser.java
/*******************************************************************************
 * PSHDL is a library and (trans-)compiler for PSHDL input. It generates
 *     output suitable for implementation or simulation of it.
 *
 *     Copyright (C) 2013 Karsten Becker (feedback (at) pshdl (dot) org)
 *
 *     This program is free software: you can redistribute it and/or modify
 *     it under the terms of the GNU General Public License as published by
 *     the Free Software Foundation, either version 3 of the License, or
 *     (at your option) any later version.
 *
 *     This program is distributed in the hope that it will be useful,
 *     but WITHOUT ANY WARRANTY; without even the implied warranty of
 *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *     GNU General Public License for more details.
 *
 *     You should have received a copy of the GNU General Public License
 *     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 *     This License does not grant permission to use the trade names, trademarks,
 *     service marks, or product names of the Licensor, except as required for
 *     reasonable and customary use in describing the origin of the Work.
 *
 * Contributors:
 *     Karsten Becker - initial API and implementation
 ******************************************************************************/
// Generated from PSHDLLang.g4 by ANTLR 4.2.2
package org.pshdl.model.parser;

import java.util.ArrayList;
import java.util.List;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class PSHDLLangParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__41 = 1, T__40 = 2, T__39 = 3, T__38 = 4, T__37 = 5, T__36 = 6, T__35 = 7, T__34 = 8, T__33 = 9, T__32 = 10, T__31 = 11, T__30 = 12, T__29 = 13,
			T__28 = 14, T__27 = 15, T__26 = 16, T__25 = 17, T__24 = 18, T__23 = 19, T__22 = 20, T__21 = 21, T__20 = 22, T__19 = 23, T__18 = 24, T__17 = 25, T__16 = 26, T__15 = 27,
			T__14 = 28, T__13 = 29, T__12 = 30, T__11 = 31, T__10 = 32, T__9 = 33, T__8 = 34, T__7 = 35, T__6 = 36, T__5 = 37, T__4 = 38, T__3 = 39, T__2 = 40, T__1 = 41,
			T__0 = 42, AND = 43, OR = 44, XOR = 45, LOGI_AND = 46, LOGI_OR = 47, MUL = 48, DIV = 49, PLUS = 50, MOD = 51, POW = 52, SLL = 53, SRA = 54, SRL = 55, EQ = 56,
			NOT_EQ = 57, LESS = 58, LESS_EQ = 59, GREATER = 60, GREATER_EQ = 61, ASSGN = 62, ADD_ASSGN = 63, SUB_ASSGN = 64, MUL_ASSGN = 65, DIV_ASSGN = 66, MOD_ASSGN = 67,
			AND_ASSGN = 68, XOR_ASSGN = 69, OR_ASSGN = 70, SLL_ASSGN = 71, SRL_ASSGN = 72, SRA_ASSGN = 73, ARITH_NEG = 74, BIT_NEG = 75, LOGIC_NEG = 76, ANY_INT = 77,
			ANY_UINT = 78, ANY_BIT = 79, ANY_IF = 80, ANY_ENUM = 81, BIT = 82, INT = 83, UINT = 84, STRING = 85, BOOL = 86, ENUM = 87, INTERFACE = 88, FUNCTION = 89, MODULE = 90,
			TESTBENCH = 91, RULE_PS_LITERAL_TERMINAL = 92, RULE_ID = 93, RULE_STRING = 94, RULE_ML_COMMENT = 95, RULE_GENERATOR_CONTENT = 96, RULE_SL_COMMENT = 97, RULE_WS = 98;
	public static final String[] tokenNames = { "<INVALID>", "'default'", "'.*'", "'{'", "'for'", "'include'", "'('", "'package'", "','", "'const'", "']'", "'@'", "'#'",
		"'simulation'", "'register'", "'generate'", "'native'", "'process'", "'record'", "'inline'", "';'", "'extends'", "'}'", "'if'", "'?'", "'export'", "'inout'",
		"'switch'", "'.'", "'param'", "'case'", "'->'", "'out'", "'substitute'", "':'", "'['", "'=>'", "'in'", "'else'", "')'", "'+:'", "'-:'", "'import'", "'&'", "'|'",
		"'^'", "'&&'", "'||'", "'*'", "'/'", "'+'", "'%'", "'**'", "'<<'", "'>>'", "'>>>'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'='", "'+='", "'-='", "'*='",
		"'/='", "'%='", "'&='", "'^='", "'|='", "'<<='", "'>>>='", "'>>='", "'-'", "'~'", "'!'", "'int<>'", "'uint<>'", "'bit<>'", "'interface<>'", "'enum<>'", "'bit'",
		"'int'", "'uint'", "'string'", "'bool'", "'enum'", "'interface'", "'function'", "'module'", "'testbench'", "RULE_PS_LITERAL_TERMINAL", "RULE_ID", "RULE_STRING",
		"RULE_ML_COMMENT", "RULE_GENERATOR_CONTENT", "RULE_SL_COMMENT", "RULE_WS" };
	public static final int RULE_psModel = 0, RULE_psUnit = 1, RULE_psExtends = 2, RULE_psImports = 3, RULE_psQualifiedNameImport = 4, RULE_psBlock = 5, RULE_psProcess = 6,
			RULE_psInstantiation = 7, RULE_psInterfaceInstantiation = 8, RULE_psDirectGeneration = 9, RULE_psPassedArguments = 10, RULE_psArgument = 11, RULE_psCast = 12,
			RULE_psExpression = 13, RULE_psValue = 14, RULE_psBitAccess = 15, RULE_psAccessRange = 16, RULE_psVariableRef = 17, RULE_psRefPart = 18, RULE_psVariable = 19,
			RULE_psStatement = 20, RULE_psExport = 21, RULE_psFunctionDeclaration = 22, RULE_psInlineFunction = 23, RULE_psSubstituteFunction = 24, RULE_psNativeFunction = 25,
			RULE_psFuncRecturnType = 26, RULE_psFuncParam = 27, RULE_psFuncSpec = 28, RULE_psFuncParamWithRW = 29, RULE_psFuncOptArray = 30, RULE_psFuncParamRWType = 31,
			RULE_psFuncParamType = 32, RULE_psFunction = 33, RULE_psFuncArgs = 34, RULE_psAssignmentOrFunc = 35, RULE_psAssignmentOp = 36, RULE_psCompoundStatement = 37,
			RULE_psIfStatement = 38, RULE_psSimpleBlock = 39, RULE_psForStatement = 40, RULE_psSwitchStatement = 41, RULE_psCaseStatements = 42, RULE_psDeclaration = 43,
			RULE_psDeclarationType = 44, RULE_psTypeDeclaration = 45, RULE_psEnumDeclaration = 46, RULE_psEnum = 47, RULE_psVariableDeclaration = 48, RULE_psDeclAssignment = 49,
			RULE_psArrayInit = 50, RULE_psArrayInitSubParens = 51, RULE_psArrayInitSub = 52, RULE_psArray = 53, RULE_psDirection = 54, RULE_psAnnotation = 55,
			RULE_psAnnotationType = 56, RULE_psPrimitive = 57, RULE_psPrimitiveType = 58, RULE_psWidth = 59, RULE_psInterfaceDeclaration = 60, RULE_psInterface = 61,
			RULE_psInterfaceExtends = 62, RULE_psInterfaceDecl = 63, RULE_psPortDeclaration = 64, RULE_psQualifiedName = 65;
	public static final String[] ruleNames = { "psModel", "psUnit", "psExtends", "psImports", "psQualifiedNameImport", "psBlock", "psProcess", "psInstantiation",
		"psInterfaceInstantiation", "psDirectGeneration", "psPassedArguments", "psArgument", "psCast", "psExpression", "psValue", "psBitAccess", "psAccessRange",
		"psVariableRef", "psRefPart", "psVariable", "psStatement", "psExport", "psFunctionDeclaration", "psInlineFunction", "psSubstituteFunction", "psNativeFunction",
		"psFuncRecturnType", "psFuncParam", "psFuncSpec", "psFuncParamWithRW", "psFuncOptArray", "psFuncParamRWType", "psFuncParamType", "psFunction", "psFuncArgs",
		"psAssignmentOrFunc", "psAssignmentOp", "psCompoundStatement", "psIfStatement", "psSimpleBlock", "psForStatement", "psSwitchStatement", "psCaseStatements",
		"psDeclaration", "psDeclarationType", "psTypeDeclaration", "psEnumDeclaration", "psEnum", "psVariableDeclaration", "psDeclAssignment", "psArrayInit",
		"psArrayInitSubParens", "psArrayInitSub", "psArray", "psDirection", "psAnnotation", "psAnnotationType", "psPrimitive", "psPrimitiveType", "psWidth",
		"psInterfaceDeclaration", "psInterface", "psInterfaceExtends", "psInterfaceDecl", "psPortDeclaration", "psQualifiedName" };

	@Override
	public String getGrammarFileName() {
		return "PSHDLLang.g4";
	}

	@Override
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public static final String MISSING_SEMI = "MISSING_SEMI";
	public static final String MISSING_NAME = "MISSING_NAME";
	public static final String MISSING_TYPE = "MISSING_TYPE";
	public static final String MISSING_WIDTH = "MISSING_WIDTH";
	public static final String MISSING_IFPAREN = "MISSING_IFPAREN";
	public static final String WRONG_ORDER = "WRONG_ORDER";

	public PSHDLLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class PsModelContext extends ParserRuleContext {
		public List<PsUnitContext> psUnit() {
			return getRuleContexts(PsUnitContext.class);
		}

		public List<PsDeclarationContext> psDeclaration() {
			return getRuleContexts(PsDeclarationContext.class);
		}

		public PsUnitContext psUnit(int i) {
			return getRuleContext(PsUnitContext.class, i);
		}

		public PsQualifiedNameContext psQualifiedName() {
			return getRuleContext(PsQualifiedNameContext.class, 0);
		}

		public PsDeclarationContext psDeclaration(int i) {
			return getRuleContext(PsDeclarationContext.class, i);
		}

		public PsModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psModel;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof PSHDLLangListener) {
				((PSHDLLangListener) listener).enterPsModel(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof PSHDLLangListener) {
				((PSHDLLangListener) listener).exitPsModel(this);
			}
		}
	}

	public final PsModelContext psModel() throws RecognitionException {
		final PsModelContext _localctx = new PsModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_psModel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(136);
				_la = _input.LA(1);
				if (_la == 7) {
					{
						setState(132);
						match(7);
						setState(133);
						psQualifiedName();
						setState(134);
						match(20);
					}
				}

				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << 9) | (1L << 11) | (1L << 13) | (1L << 14) | (1L << 16) | (1L << 18) | (1L << 19) | (1L << 26)
						| (1L << 29) | (1L << 32) | (1L << 33) | (1L << 37))) != 0))
						|| (((((_la - 82)) & ~0x3f) == 0) && (((1L << (_la - 82)) & ((1L << (BIT - 82)) | (1L << (INT - 82)) | (1L << (UINT - 82)) | (1L << (STRING - 82))
								| (1L << (BOOL - 82)) | (1L << (ENUM - 82)) | (1L << (INTERFACE - 82)) | (1L << (MODULE - 82)) | (1L << (TESTBENCH - 82)))) != 0))) {
					{
						setState(140);
						switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
						case 1: {
							setState(138);
							psUnit();
						}
						break;

						case 2: {
							setState(139);
							psDeclaration();
						}
						break;
						}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsUnitContext extends ParserRuleContext {
		public Token unitType;

		public PsImportsContext psImports(int i) {
			return getRuleContext(PsImportsContext.class, i);
		}

		public PsInterfaceContext psInterface() {
			return getRuleContext(PsInterfaceContext.class, 0);
		}

		public List<PsBlockContext> psBlock() {
			return getRuleContexts(PsBlockContext.class);
		}

		public PsAnnotationContext psAnnotation(int i) {
			return getRuleContext(PsAnnotationContext.class, i);
		}

		public List<PsImportsContext> psImports() {
			return getRuleContexts(PsImportsContext.class);
		}

		public PsBlockContext psBlock(int i) {
			return getRuleContext(PsBlockContext.class, i);
		}

		public PsExtendsContext psExtends() {
			return getRuleContext(PsExtendsContext.class, 0);
		}

		public List<PsAnnotationContext> psAnnotation() {
			return getRuleContexts(PsAnnotationContext.class);
		}

		public PsUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psUnit;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof PSHDLLangListener) {
				((PSHDLLangListener) listener).enterPsUnit(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof PSHDLLangListener) {
				((PSHDLLangListener) listener).exitPsUnit(this);
			}
		}
	}

	public final PsUnitContext psUnit() throws RecognitionException {
		final PsUnitContext _localctx = new PsUnitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_psUnit);
		int _la;
		try {
			setState(196);
			switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
					setState(148);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == 11) {
						{
							{
								setState(145);
								psAnnotation();
							}
						}
						setState(150);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(151);
					_localctx.unitType = _input.LT(1);
					_la = _input.LA(1);
					if (!((_la == MODULE) || (_la == TESTBENCH))) {
						_localctx.unitType = _errHandler.recoverInline(this);
					}
					consume();
					setState(152);
					psInterface();
					setState(154);
					_la = _input.LA(1);
					if (_la == 21) {
						{
							setState(153);
							psExtends();
						}
					}

					setState(156);
					match(3);
					setState(160);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == 42) {
						{
							{
								setState(157);
								psImports();
							}
						}
						setState(162);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(166);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << 3) | (1L << 4) | (1L << 5) | (1L << 9) | (1L << 11) | (1L << 13) | (1L << 14) | (1L << 16)
							| (1L << 17) | (1L << 18) | (1L << 19) | (1L << 23) | (1L << 25) | (1L << 26) | (1L << 27) | (1L << 29) | (1L << 32) | (1L << 33) | (1L << 37))) != 0))
							|| (((((_la - 82)) & ~0x3f) == 0) && (((1L << (_la - 82)) & ((1L << (BIT - 82)) | (1L << (INT - 82)) | (1L << (UINT - 82)) | (1L << (STRING - 82))
									| (1L << (BOOL - 82)) | (1L << (ENUM - 82)) | (1L << (INTERFACE - 82)) | (1L << (RULE_ID - 82)))) != 0))) {
						{
							{
								setState(163);
								psBlock();
							}
						}
						setState(168);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(169);
					match(22);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
					setState(174);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == 11) {
						{
							{
								setState(171);
								psAnnotation();
							}
						}
						setState(176);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(177);
					_localctx.unitType = _input.LT(1);
					_la = _input.LA(1);
					if (!((_la == MODULE) || (_la == TESTBENCH))) {
						_localctx.unitType = _errHandler.recoverInline(this);
					}
					consume();
					setState(179);
					_la = _input.LA(1);
					if (_la == 21) {
						{
							setState(178);
							psExtends();
						}
					}

					setState(181);
					match(3);
					setState(185);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == 42) {
						{
							{
								setState(182);
								psImports();
							}
						}
						setState(187);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(191);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << 3) | (1L << 4) | (1L << 5) | (1L << 9) | (1L << 11) | (1L << 13) | (1L << 14) | (1L << 16)
							| (1L << 17) | (1L << 18) | (1L << 19) | (1L << 23) | (1L << 25) | (1L << 26) | (1L << 27) | (1L << 29) | (1L << 32) | (1L << 33) | (1L << 37))) != 0))
							|| (((((_la - 82)) & ~0x3f) == 0) && (((1L << (_la - 82)) & ((1L << (BIT - 82)) | (1L << (INT - 82)) | (1L << (UINT - 82)) | (1L << (STRING - 82))
									| (1L << (BOOL - 82)) | (1L << (ENUM - 82)) | (1L << (INTERFACE - 82)) | (1L << (RULE_ID - 82)))) != 0))) {
						{
							{
								setState(188);
								psBlock();
							}
						}
						setState(193);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(194);
					match(22);
					notifyErrorListeners(MISSING_NAME);
				}
				break;
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsExtendsContext extends ParserRuleContext {
		public PsQualifiedNameContext psQualifiedName(int i) {
			return getRuleContext(PsQualifiedNameContext.class, i);
		}

		public List<PsQualifiedNameContext> psQualifiedName() {
			return getRuleContexts(PsQualifiedNameContext.class);
		}

		public PsExtendsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_psExtends;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof PSHDLLangListener) {
				((PSHDLLangListener) listener).enterPsExtends(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof PSHDLLangListener) {
				((PSHDLLangListener) listener).exitPsExtends(this);
			}
		}
	}

	public final PsExtendsContext psExtends() throws RecognitionException {
		final PsExtendsContext _localctx = new PsExtendsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_psExtends);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(198);
				match(21);
				setState(199);
				psQualifiedName();
				setState(204);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == 8) {
					{
						{
							setState(200);
							match(8);
							setState(201);
							psQualifiedName();
						}
					}
					setState(206);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsImportsContext extends ParserRuleContext {
		public PsQualifiedNameImportContext psQualifiedNameImport() {
			return getRuleContext(PsQualifiedNameImportContext.class, 0);
		}
